# pytix

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test.py
.github/workflows/: ci.yml  docfx-unitypackageon.yml  python-package.yml  release_pypi.yml  testing.yml
algebra/Matrix/: index.html
algebra/Vector/: index.html
algebra/statics/: index.html
docs/: Matrix.md  index.md
docs/algebra/: Matrix.md  Vector.md  statics.md
docs/errors/: decorator.md
errors/decorator/: index.html
pylix/tests/algebra/: test_matrix.py  test_polynomial.py
pytix/: __init__.py
pytix/algebra/: __init__.py  equations.py  matrix.py  statics.py  vector.py
pytix/errors/: __init__.py  assertion.py  decorator.py  error_messages.py  useful_errors.py
pytix/tests/algebra/: test_matrix.py  test_polynomial.py  test_vector.py
search/: search_index.json
tests/: test_matrix.py
tests/algebra/: test_matrix.py  test_statics.py  test_vector.py
useful_utility/: __init__.py  types.py  useful_exception.py
useful_utility/algebra/: __init__.py  _test.py  equations.py  matrix.py  statics.py  test_matrix.py  test_vector.py  vector.py
useful_utility/errors/: __init__.py  assertion.py  decorator.py  error_messages.py  useful_errors.py
useful_utility/exceptions/: __init__.py  useful_exception.py
useful_utility/tests/: test_matrix.py  test_vector.py
useful_utility/tests/algebra/: test_matrix.py  test_polynomial.py  test_vector.py  test_vector_2d.py  test_vector_3d.py
