[tool.poetry]
name = "pylix"
version = "0.0.1"
description = "Useful things for python"
authors = ["SirMrManuel0"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
colorama = "^0.4.6"
iniconfig = "^2.0.0"
packaging = "^24.2"
pluggy = "^1.5.0"
setuptools = "76.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"